--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -6,8 +6,11 @@
 base:           null
 
 # CDN location for development
-file:           http://sparanoid.s3-website-us-east-1.amazonaws.com
+file:           //localhost:4321
 # file:           http://d349cztnlupsuf.cloudfront.net
+
+# Img assets URL used in posts, without trailing slash. ie. `<img href="{{ site.file }}/image.png">`. In the most cases this URL should be powered by a CDN provider
+img:           //localhost:4321/assets/img
 
 # Force UTF-8 since local server doesn't send charset in their respond header
 force_utf_8:    true
