--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -19,7 +19,7 @@ dev:            true
 baseurl:        ""
 
 # CDN location for development
-file:           //sparanoid.s3-website-us-east-1.amazonaws.com
+file:           https://s3.amazonaws.com/sparanoid
 
 # Force UTF-8 since local server doesn't send charset in their respond header
 force_utf_8:    true
