chore: fix broken links

--- a/_app/_data/authors.yml
+++ b/_app/_data/authors.yml
@@ -15,5 +15,5 @@ default:
 tester:
   name:         Tester
   email:        test@test.com
-  web:          http://tester.com/
+  web:          https://example.com/
   twitter:      tester
