--- a/package.json
+++ b/package.json
@@ -60,5 +60,10 @@
     "grunt-xmlmin": "0.1.8",
     "jit-grunt": "0.10.0",
     "node-sass": "4.12.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
